fix edition overflow on comments

--- a/client/views/commentary/commentary.import.less
+++ b/client/views/commentary/commentary.import.less
@@ -463,7 +463,7 @@ article.lemma-comment {
 
   button {
     padding: 5px 10px;
-    max-width: 200px;
+    max-width: none;
     text-overflow: ellipsis;
 
     span {
